-better ladder -survival commented code deleted -again button in wrong answer / all answered

--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ a{
     padding-left: 15px;
     border-radius:4px;
     margin-bottom:25px;
-    background-color:#dff0d8 ;
-    border: palegreen 1px solid;
+    background-color:lightgoldenrodyellow ;
+    border: #F4FCA9 1px solid;
 }
 
 
