--- a/style.css
+++ b/style.css
@@ -100,3 +100,33 @@ a{
     font-size:20px;
     text-align: left;
 }
+
+dl.list dt {
+    float: left;
+    width: 180px;
+    clear: left;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+dt {
+    font-weight: bold;
+    margin-right: 10px;
+}
+dt, dd {
+    line-height: 20px;
+}
+
+dd {
+    display: block;
+}
+
+.profilepicture{
+   }
+
+.profilepicrightfill{
+    float:left;
+    height:100px;
+    width:130px;
+}
